# RustRaft

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: gap_plan.md
examples/: byteraft_parity_benchmark.rs  open_source_surface.rs  read_safety.rs  readiness_report.rs
scripts/: byteraft_native_kvbench_adapter.sh  byteraft_vs_rustraft_benchmark.sh
src/: benchmark.rs  cluster.rs  config.rs  fault.rs  lib.rs  membership.rs  metrics.rs  node.rs  readiness.rs  snapshot.rs  status.rs  storage.rs  transport.rs  wal.rs
tests/: byteraft_benchmark_harness.rs  byteraft_parity_matrix.rs  byteraft_runtime_capability.rs  durability_parity.rs  fault_harness_contract.rs  fsm_adapter.rs  generic_model_contract.rs  membership_executor.rs  membership_wal_snapshot.rs  module_contract.rs  node_runtime.rs  persistent_wal.rs  process_rollout_readiness.rs  public_contract_examples.rs  raft_cluster_engine.rs  raft_integration_model.rs  raft_unit_contract.rs  real_byteraft_benchmark_contract.rs  replication_pipeline.rs  runtime_reports.rs  snapshot_lifecycle.rs  standalone_embedding_contract.rs  state_machine_apply.rs  transport_contract.rs  transport_observability.rs
