[package]
name = "rustraft"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "TemporalStore-owned RustRaft readiness and parity contract library."
repository = "https://github.com/bjmeetsfo/RustRaft"
readme = "README.md"
keywords = ["raft", "temporalstore", "distributed-systems", "readiness"]
categories = ["data-structures", "development-tools::testing"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
